--- a/Padhale - Website for College/playlists.html
+++ b/Padhale - Website for College/playlists.html
@@ -129,154 +129,208 @@
               <img src="./assets/img/90's.jpeg" alt="Playlist dp" />
               <h5 class="title1">Bollywood Chronicles<br />[90s Edition]</h5>
               <h5 class="title">Genre : Mixed</h5>
-              <button
-                style="
-                  margin-top: 10px;
-                  border-radius: 20px;
-                  background-color: rgb(36, 208, 56);
-                  width: 150px;
-                  align-self: center;
-                  color: rgb(255, 255, 255);
-                "
+              <a
+                href="https://open.spotify.com/playlist/4KmZV1R9WaumV4LOs309fG?si=b6cfbd42fb244a2a"
+                target="_blank"
               >
-                Listen Now
-              </button>
+                <button
+                  style="
+                    margin-left: 60px;
+                    margin-top: 10px;
+                    border-radius: 20px;
+                    background-color: rgb(36, 208, 56);
+                    width: 150px;
+                    align-self: center;
+                    color: rgb(255, 255, 255);
+                  "
+                >
+                  Listen Now
+                </button>
+              </a>
             </div>
             <div class="card">
               <img src="./assets/img/bolly.jpg" alt="Playlist dp" />
               <h5 class="title1">Bollywood's Timeless Treasures</h5>
               <h5 class="title">Genre : Mixed</h5>
-              <button
-                style="
-                  margin-top: 10px;
-                  border-radius: 20px;
-                  background-color: rgb(36, 208, 56);
-                  width: 150px;
-                  align-self: center;
-                  color: rgb(255, 255, 255);
-                "
+              <a
+                href="https://open.spotify.com/playlist/1tsGfsVjZsec6r2eEwKOMW?si=e0709a7070134d45"
+                target="_blank"
               >
-                Listen Now
-              </button>
+                <button
+                  style="
+                    margin-left: 60px;
+                    margin-top: 10px;
+                    border-radius: 20px;
+                    background-color: rgb(36, 208, 56);
+                    width: 150px;
+                    align-self: center;
+                    color: rgb(255, 255, 255);
+                  "
+                >
+                  Listen Now
+                </button>
+              </a>
             </div>
             <div class="card">
               <img src="./assets/img/fun.jpg" alt="Playlist dp" />
               <h5 class="title1">Joyful Jams</h5>
               <h5 class="title">Genre : Pop, Dance, Reggae</h5>
-              <button
-                style="
-                  margin-top: 10px;
-                  border-radius: 20px;
-                  background-color: rgb(36, 208, 56);
-                  width: 150px;
-                  align-self: center;
-                  color: rgb(255, 255, 255);
-                "
+              <a
+                href="https://open.spotify.com/playlist/0WTZVMDLeCrpLKr1R1mScr?si=a7d3ce46977a4975"
+                target="_blank"
               >
-                Listen Now
-              </button>
+                <button
+                  style="
+                    margin-left: 60px;
+                    margin-top: 10px;
+                    border-radius: 20px;
+                    background-color: rgb(36, 208, 56);
+                    width: 150px;
+                    align-self: center;
+                    color: rgb(255, 255, 255);
+                  "
+                >
+                  Listen Now
+                </button>
+              </a>
             </div>
             <div class="card">
               <img src="./assets/img/eng.png" alt="Playlist dp" />
               <h5 class="title1">English Delights: Ultimate Playlist</h5>
               <h5 class="title">Genre : Mixed</h5>
-              <button
-                style="
-                  margin-top: 10px;
-                  border-radius: 20px;
-                  background-color: rgb(36, 208, 56);
-                  width: 150px;
-                  align-self: center;
-                  color: rgb(255, 255, 255);
-                "
+              <a
+                href="https://open.spotify.com/playlist/3u7GrmseeDG1aY1sc4e4VX?si=4308e73ea7974ad0"
+                target="_blank"
               >
-                Listen Now
-              </button>
+                <button
+                  style="
+                    margin-left: 60px;
+                    margin-top: 10px;
+                    border-radius: 20px;
+                    background-color: rgb(36, 208, 56);
+                    width: 150px;
+                    align-self: center;
+                    color: rgb(255, 255, 255);
+                  "
+                >
+                  Listen Now
+                </button>
+              </a>
             </div>
             <div class="card">
               <img src="./assets/img/ghazals.jpg" alt="Playlist dp" />
               <h5 class="title1">Ghazal Darbar: Timeless Poetry in Music</h5>
               <h5 class="title">Genre : Contemporary, Sufi</h5>
-              <button
-                style="
-                  margin-top: 10px;
-                  border-radius: 20px;
-                  background-color: rgb(36, 208, 56);
-                  width: 150px;
-                  align-self: center;
-                  color: rgb(255, 255, 255);
-                "
+              <a
+                href="http://open.spotify.com/playlist/3aVvXfZZds4cjdZXloUzuv?si=3c99edcead0e4b0d"
+                target="_blank"
               >
-                Listen Now
-              </button>
+                <button
+                  style="
+                    margin-left: 60px;
+                    margin-top: 10px;
+                    border-radius: 20px;
+                    background-color: rgb(36, 208, 56);
+                    width: 150px;
+                    align-self: center;
+                    color: rgb(255, 255, 255);
+                  "
+                >
+                  Listen Now
+                </button>
+              </a>
             </div>
             <div class="card">
               <img src="./assets/img/qawwali.jpg" alt="Playlist dp" />
               <h5 class="title1">Qawwali Quarters: Spiritual Ecstasy</h5>
               <h5 class="title">Genre : Qawwali</h5>
-              <button
-                style="
-                  margin-top: 10px;
-                  border-radius: 20px;
-                  background-color: rgb(36, 208, 56);
-                  width: 150px;
-                  align-self: center;
-                  color: rgb(255, 255, 255);
-                "
+              <a
+                href="https://open.spotify.com/playlist/2p544otR4yKzPYdIr0npXB?si=50f0d3256c504b66"
+                target="_blank"
               >
-                Listen Now
-              </button>
+                <button
+                  style="
+                    margin-left: 60px;
+                    margin-top: 10px;
+                    border-radius: 20px;
+                    background-color: rgb(36, 208, 56);
+                    width: 150px;
+                    align-self: center;
+                    color: rgb(255, 255, 255);
+                  "
+                >
+                  Listen Now
+                </button>
+              </a>
             </div>
             <div class="card">
               <img src="./assets/img/dhh.jpg" alt="Playlist dp" />
               <h5 class="title1">Lyrically Gifted: Rap Playlist</h5>
               <h5 class="title">Genre : Hip-Hop</h5>
-              <button
-                style="
-                  margin-top: 10px;
-                  border-radius: 20px;
-                  background-color: rgb(36, 208, 56);
-                  width: 150px;
-                  align-self: center;
-                  color: rgb(255, 255, 255);
-                "
+              <a
+                href="https://open.spotify.com/playlist/0LIcFmt6UxctYYx95dssPU?si=5fe0513c343a4fa5"
+                target="_blank"
               >
-                Listen Now
-              </button>
+                <button
+                  style="
+                    margin-left: 60px;
+                    margin-top: 10px;
+                    border-radius: 20px;
+                    background-color: rgb(36, 208, 56);
+                    width: 150px;
+                    align-self: center;
+                    color: rgb(255, 255, 255);
+                  "
+                >
+                  Listen Now
+                </button>
+              </a>
             </div>
             <div class="card">
               <img src="./assets/img/sad.jpeg" alt="Playlist dp" />
               <h5 class="title1">Tears of Time: Hindi Sad Songs</h5>
               <h5 class="title">Genre : Bollywood</h5>
-              <button
-                style="
-                  margin-top: 10px;
-                  border-radius: 20px;
-                  background-color: rgb(36, 208, 56);
-                  width: 150px;
-                  align-self: center;
-                  color: rgb(255, 255, 255);
-                "
+              <a
+                href="https://open.spotify.com/playlist/4arI5XXNWH7g6a5mqxu32c?si=79235a8ffd76464c"
+                target="_blank"
               >
-                Listen Now
-              </button>
+                <button
+                  style="
+                    margin-left: 60px;
+                    margin-top: 10px;
+                    border-radius: 20px;
+                    background-color: rgb(36, 208, 56);
+                    width: 150px;
+                    align-self: center;
+                    color: rgb(255, 255, 255);
+                  "
+                >
+                  Listen Now
+                </button>
+              </a>
             </div>
             <div class="card">
               <img src="./assets/img/lofi.jpeg" alt="Playlist dp" />
               <h5 class="title1">Calm Canvas: Lo-Fi Masterpieces</h5>
               <h5 class="title">Genre : Lo-fi, ChillPop</h5>
-              <button
-                style="
-                  margin-top: 10px;
-                  border-radius: 20px;
-                  background-color: rgb(36, 208, 56);
-                  width: 150px;
-                  align-self: center;
-                  color: rgb(255, 255, 255);
-                "
+              <a
+                href="https://www.youtube.com/watch?v=e5VxW7ZjMXY&list=PLyinBxl3BJnT7R8QRAykS2aCEc9i6Bes0"
+                target="_blank"
               >
-                Listen Now
-              </button>
+                <button
+                  style="
+                    margin-left: 60px;
+                    margin-top: 10px;
+                    border-radius: 20px;
+                    background-color: rgb(36, 208, 56);
+                    width: 150px;
+                    align-self: center;
+                    color: rgb(255, 255, 255);
+                  "
+                >
+                  Listen Now
+                </button>
+              </a>
             </div>
           </div>
         </div>
