--- a/Padhale - Website for College/index.html
+++ b/Padhale - Website for College/index.html
@@ -466,7 +466,7 @@
               </p>
             </div>
             <div class="col-lg-3 cta-btn-container text-center">
-              <a class="cta-btn align-middle" href="#">Get Involved</a>
+              <a class="cta-btn align-middle" href="form.html">Get Involved</a>
             </div>
           </div>
         </div>
