--- a/Padhale - Website for College/index.html
+++ b/Padhale - Website for College/index.html
@@ -101,7 +101,7 @@
                 >Direct kaam ki baat</a
               >
               <a
-                href="https://www.youtube.com/watch?v=jDDaplaOz7Q"
+                href="https://biteable.com/watch/4034364/80702b464460302403c07f3eb0c94e03"
                 class="glightbox btn-watch-video"
                 ><i class="bi bi-play-circle"></i><span>Watch Video</span></a
               >
@@ -389,14 +389,16 @@
               data-aos="zoom-in"
               data-aos-delay="100"
             >
-              <div class="icon-box">
-                <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                <h4><a href="./fun.html" target="_blank">Fun Zone</a></h4>
-                <p>
-                  Agar padhai krte krte thoda chill krne ka man ho jaye to yaha
-                  aapko aapke refreshment k liye saare options hai.
-                </p>
-              </div>
+              <a href="./fun.html">
+                <div class="icon-box">
+                  <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                  <h4><a href="./fun.html" target="_blank">Fun Zone</a></h4>
+                  <p>
+                    Agar padhai krte krte thoda chill krne ka man ho jaye to
+                    yaha aapko aapke refreshment k liye saare options hai.
+                  </p>
+                </div>
+              </a>
             </div>
 
             <div
@@ -404,14 +406,16 @@
               data-aos="zoom-in"
               data-aos-delay="200"
             >
-              <div class="icon-box">
-                <div class="icon"><i class="bx bx-file"></i></div>
-                <h4><a href="./notes.html">Hadwritten Notes</a></h4>
-                <p>
-                  Class me jo bhi padhaya gaya hai wo sb. Bas itna padh lo aur
-                  pgir aur kuch padhne ki jaroorat nahi.
-                </p>
-              </div>
+              <a href="./notes.html">
+                <div class="icon-box">
+                  <div class="icon"><i class="bx bx-file"></i></div>
+                  <h4><a href="./notes.html">Hadwritten Notes</a></h4>
+                  <p>
+                    Class me jo bhi padhaya gaya hai wo sb. Bas itna padh lo aur
+                    pgir aur kuch padhne ki jaroorat nahi.
+                  </p>
+                </div>
+              </a>
             </div>
 
             <div
@@ -419,14 +423,16 @@
               data-aos="zoom-in"
               data-aos-delay="300"
             >
-              <div class="icon-box">
-                <div class="icon"><i class="bx bx-tachometer"></i></div>
-                <h4><a href="./playlists.html">Playlists</a></h4>
-                <p>
-                  Home-Work, Journal, Assignment likhte waqt agar kuch sun ne ka
-                  man ho to inhe try kr skte ho.
-                </p>
-              </div>
+              <a href="./playlists.html">
+                <div class="icon-box">
+                  <div class="icon"><i class="bx bx-tachometer"></i></div>
+                  <h4><a href="./playlists.html">Playlists</a></h4>
+                  <p>
+                    Home-Work, Journal, Assignment likhte waqt agar kuch sun ne
+                    ka man ho to inhe try kr skte ho.
+                  </p>
+                </div>
+              </a>
             </div>
 
             <div
@@ -434,13 +440,16 @@
               data-aos="zoom-in"
               data-aos-delay="400"
             >
-              <div class="icon-box">
-                <div class="icon"><i class="bx bx-layer"></i></div>
-                <h4><a href="./books.html">Books and Resources</a></h4>
-                <p>
-                  Agar aur kuch padhne ki iccha ho to always you can check this!
-                </p>
-              </div>
+              <a href="./books.html">
+                <div class="icon-box">
+                  <div class="icon"><i class="bx bx-layer"></i></div>
+                  <h4><a href="./books.html">Books and Resources</a></h4>
+                  <p>
+                    Agar aur kuch padhne ki iccha ho to always you can check
+                    this!
+                  </p>
+                </div>
+              </a>
             </div>
           </div>
         </div>
@@ -694,6 +703,46 @@
         </div>
       </section>
       <!-- End Frequently Asked Questions Section -->
+
+      <!-- Contact Form -->
+      <section id="contact-us-form">
+        <div class="form2">
+          <form
+            class="fill-form2"
+            name="contact-us-form"
+            id="myForm"
+            method="post"
+          >
+            <div class="title">YOUR OPINION MATTERS !</div>
+            <div class="subtitle">
+              Help us to pick our mistakes, share your opinion about our
+              website.
+            </div>
+            <div class="input-container ic2">
+              <input id="Name" class="input" name="Name" type="text" />
+              <div class="cut"></div>
+              <label for="name" class="">Name</label>
+            </div>
+            <div class="input-container ic2">
+              <input id="Message" class="input" name="Message" type="text" />
+              <div class="cut"></div>
+              <label for="message" class="">Message</label>
+            </div>
+            <div class="input-container ic2">
+              <input id="Number" class="input" name="Number" type="text" />
+              <div class="cut"></div>
+              <label for="number" class="">Number</label>
+            </div>
+            <div class="input-container ic2">
+              <input id="Email" class="input" name="Email" type="email" />
+              <div class="cut"></div>
+              <label for="email" class="">Email</label>
+            </div>
+            <input type="submit" class="submit" value="Submit" />
+          </form>
+        </div>
+      </section>
+      <!-- End of Feedback Form -->
     </main>
     <!-- End #main -->
 
