Made it more resposive

--- a/Padhale - Website for College/notes.html
+++ b/Padhale - Website for College/notes.html
@@ -322,9 +322,7 @@
                 As taught by Prof.Prateek Lepse
               </p>
             </div>
-            <a href="#"
-              ><button style="width: 200px">Dowload Kare !!</button></a
-            >
+            <a href="#"><button>Dowload Kare !!</button></a>
           </div>
         </div>
       </section>
