--- a/Padhale - Website for College/playlists.html
+++ b/Padhale - Website for College/playlists.html
@@ -67,23 +67,6 @@
             <li><a class="nav-link scrollto" href="#features">Features</a></li>
             <!-- <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li> -->
             <li><a class="nav-link scrollto" href="#team">Team</a></li>
-            <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li> -->
             <li><a class="nav-link scrollto" href="#cta">Contact</a></li>
             <li>
               <button id="theme-toggle" class="getstarted scrollto">
@@ -133,19 +116,7 @@
                 href="https://open.spotify.com/playlist/4KmZV1R9WaumV4LOs309fG?si=b6cfbd42fb244a2a"
                 target="_blank"
               >
-                <button
-                  style="
-                    margin-left: 60px;
-                    margin-top: 10px;
-                    border-radius: 20px;
-                    background-color: rgb(36, 208, 56);
-                    width: 150px;
-                    align-self: center;
-                    color: rgb(255, 255, 255);
-                  "
-                >
-                  Listen Now
-                </button>
+                <button>Listen Now</button>
               </a>
             </div>
             <div class="card">
@@ -156,19 +127,7 @@
                 href="https://open.spotify.com/playlist/1tsGfsVjZsec6r2eEwKOMW?si=e0709a7070134d45"
                 target="_blank"
               >
-                <button
-                  style="
-                    margin-left: 60px;
-                    margin-top: 10px;
-                    border-radius: 20px;
-                    background-color: rgb(36, 208, 56);
-                    width: 150px;
-                    align-self: center;
-                    color: rgb(255, 255, 255);
-                  "
-                >
-                  Listen Now
-                </button>
+                <button>Listen Now</button>
               </a>
             </div>
             <div class="card">
@@ -179,19 +138,7 @@
                 href="https://open.spotify.com/playlist/0WTZVMDLeCrpLKr1R1mScr?si=a7d3ce46977a4975"
                 target="_blank"
               >
-                <button
-                  style="
-                    margin-left: 60px;
-                    margin-top: 10px;
-                    border-radius: 20px;
-                    background-color: rgb(36, 208, 56);
-                    width: 150px;
-                    align-self: center;
-                    color: rgb(255, 255, 255);
-                  "
-                >
-                  Listen Now
-                </button>
+                <button>Listen Now</button>
               </a>
             </div>
             <div class="card">
@@ -202,19 +149,7 @@
                 href="https://open.spotify.com/playlist/3u7GrmseeDG1aY1sc4e4VX?si=4308e73ea7974ad0"
                 target="_blank"
               >
-                <button
-                  style="
-                    margin-left: 60px;
-                    margin-top: 10px;
-                    border-radius: 20px;
-                    background-color: rgb(36, 208, 56);
-                    width: 150px;
-                    align-self: center;
-                    color: rgb(255, 255, 255);
-                  "
-                >
-                  Listen Now
-                </button>
+                <button>Listen Now</button>
               </a>
             </div>
             <div class="card">
@@ -225,19 +160,7 @@
                 href="http://open.spotify.com/playlist/3aVvXfZZds4cjdZXloUzuv?si=3c99edcead0e4b0d"
                 target="_blank"
               >
-                <button
-                  style="
-                    margin-left: 60px;
-                    margin-top: 10px;
-                    border-radius: 20px;
-                    background-color: rgb(36, 208, 56);
-                    width: 150px;
-                    align-self: center;
-                    color: rgb(255, 255, 255);
-                  "
-                >
-                  Listen Now
-                </button>
+                <button>Listen Now</button>
               </a>
             </div>
             <div class="card">
@@ -248,19 +171,7 @@
                 href="https://open.spotify.com/playlist/2p544otR4yKzPYdIr0npXB?si=50f0d3256c504b66"
                 target="_blank"
               >
-                <button
-                  style="
-                    margin-left: 60px;
-                    margin-top: 10px;
-                    border-radius: 20px;
-                    background-color: rgb(36, 208, 56);
-                    width: 150px;
-                    align-self: center;
-                    color: rgb(255, 255, 255);
-                  "
-                >
-                  Listen Now
-                </button>
+                <button>Listen Now</button>
               </a>
             </div>
             <div class="card">
@@ -271,19 +182,7 @@
                 href="https://open.spotify.com/playlist/0LIcFmt6UxctYYx95dssPU?si=5fe0513c343a4fa5"
                 target="_blank"
               >
-                <button
-                  style="
-                    margin-left: 60px;
-                    margin-top: 10px;
-                    border-radius: 20px;
-                    background-color: rgb(36, 208, 56);
-                    width: 150px;
-                    align-self: center;
-                    color: rgb(255, 255, 255);
-                  "
-                >
-                  Listen Now
-                </button>
+                <button>Listen Now</button>
               </a>
             </div>
             <div class="card">
@@ -294,19 +193,7 @@
                 href="https://open.spotify.com/playlist/4arI5XXNWH7g6a5mqxu32c?si=79235a8ffd76464c"
                 target="_blank"
               >
-                <button
-                  style="
-                    margin-left: 60px;
-                    margin-top: 10px;
-                    border-radius: 20px;
-                    background-color: rgb(36, 208, 56);
-                    width: 150px;
-                    align-self: center;
-                    color: rgb(255, 255, 255);
-                  "
-                >
-                  Listen Now
-                </button>
+                <button>Listen Now</button>
               </a>
             </div>
             <div class="card">
@@ -317,19 +204,7 @@
                 href="https://www.youtube.com/watch?v=e5VxW7ZjMXY&list=PLyinBxl3BJnT7R8QRAykS2aCEc9i6Bes0"
                 target="_blank"
               >
-                <button
-                  style="
-                    margin-left: 60px;
-                    margin-top: 10px;
-                    border-radius: 20px;
-                    background-color: rgb(36, 208, 56);
-                    width: 150px;
-                    align-self: center;
-                    color: rgb(255, 255, 255);
-                  "
-                >
-                  Listen Now
-                </button>
+                <button>Listen Now</button>
               </a>
             </div>
           </div>
