--- a/Padhale - Website for College/index.html
+++ b/Padhale - Website for College/index.html
@@ -385,23 +385,6 @@
 
           <div class="row">
             <div
-              class="col-xl-3 col-md-6 d-flex align-items-stretch"
-              data-aos="zoom-in"
-              data-aos-delay="100"
-            >
-              <a href="./fun.html">
-                <div class="icon-box">
-                  <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                  <h4><a href="./fun.html" target="_blank">Fun Zone</a></h4>
-                  <p>
-                    Agar padhai krte krte thoda chill krne ka man ho jaye to
-                    yaha aapko aapke refreshment k liye saare options hai.
-                  </p>
-                </div>
-              </a>
-            </div>
-
-            <div
               class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0"
               data-aos="zoom-in"
               data-aos-delay="200"
@@ -451,6 +434,22 @@
                 </div>
               </a>
             </div>
+
+            <div
+              class="col-xl-3 col-md-6 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="100"
+            >
+              <a href="#  ">
+                <div class="icon-box">
+                  <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                  <h4><a href="./fun.html" target="_blank">Fun Zone</a></h4>
+                  <p>
+                    Something very interesting is on the way......<br><br>STAY TUNED !!!
+                  </p>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </section>
@@ -488,17 +487,18 @@
           <div class="section-title">
             <h2>Meet The Team</h2>
             <p>
-              Meet our dynamic team! We're a passionate duo dedicated to
-              crafting and managing this innovative platform. With a blend of
-              web design, development, content management, and a shared vision
-              for enhancing education, we're here to make your learning
-              experience exceptional
+              Meet our dedicated team! I'm a passionate individual committed to
+              crafting and managing this innovative platform. With a background
+              in web design, development, and content management, and a shared
+              vision for enhancing education, I'm here to make your learning
+              experience exceptional. While it's currently a one-person show,
+              I'm fully committed to delivering the best for you.
             </p>
           </div>
 
-          <div class="row">
+          <div class="row d-flex justify-content-center">
             <div class="col-lg-6" data-aos="zoom-in" data-aos-delay="100">
-              <div class="member d-flex align-items-start">
+              <div class="member d-flex align-items-lg-center">
                 <div class="pic">
                   <img
                     src="assets/img/team/mahi.jpg"
@@ -533,7 +533,7 @@
               </div>
             </div>
 
-            <div
+            <!-- <div
               class="col-lg-6 mt-4 mt-lg-0"
               data-aos="zoom-in"
               data-aos-delay="200"
@@ -558,7 +558,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
@@ -755,7 +755,7 @@
               <h3>Padhle</h3>
               <p>
                 A project by the <br />
-                students of RCOEM<br />
+                student of RCOEM<br />
                 Nagpur <br /><br />
                 <strong>Phone:</strong> 9607980531/2/3/4/5<br />
                 <strong>Website:</strong> http://www.rknec.edu/<br />
